[gd_scene load_steps=6 format=3 uid="uid://bs2bigpc2vsmn"]

[ext_resource type="PackedScene" uid="uid://b4530u4x8obbs" path="res://scene/entity/Components/velocity_and_direction.tscn" id="1_4n1lq"]
[ext_resource type="Script" path="res://scene/entity/ennemy/droid_melee.gd" id="1_k5bd0"]
[ext_resource type="PackedScene" uid="uid://cyf1o7jdqeggd" path="res://scene/entity/Components/health_component.tscn" id="3_isrlh"]
[ext_resource type="PackedScene" uid="uid://dqseegllsngkg" path="res://scene/entity/Components/hitbox_component.tscn" id="4_6nfo0"]
[ext_resource type="PackedScene" uid="uid://b3utut6fbe16w" path="res://scene/entity/weapon/gun.tscn" id="5_csga6"]

[node name="DroidMelee" type="CharacterBody2D" groups=["MÃ©chant"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_k5bd0")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.570963, 0.362398, 0.478245, 1)
polygon = PackedVector2Array(-4, -6, 4, -6, 7, 0, 4, 5, -4, 5, -7, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, -6, 4, -6, 7, 0, 4, 5, -4, 5, -7, 0)

[node name="VelocityAndDirection" parent="." instance=ExtResource("1_4n1lq")]
speed = 100.0

[node name="HealthComponent" parent="." instance=ExtResource("3_isrlh")]
MAX_HEALTH = 10

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_componant") instance=ExtResource("4_6nfo0")]
collision_layer = 32
collision_mask = 64
health_componant = NodePath("../HealthComponent")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-4, -6, 4, -6, 7, 0, 4, 5, -4, 5, -7, 0)

[node name="Gun" parent="." instance=ExtResource("5_csga6")]
touch_ally = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
